--- a/storage/templates/storage/redesign/storage.html
+++ b/storage/templates/storage/redesign/storage.html
@@ -204,7 +204,7 @@
 					</div>
 					<!--лутбоксы -->
 			  		<div class="store__wp-wrapper">
-						<h2>Ледяные сундуки</h2>
+						<h2>{% trans 'Ледяные сундуки' context "lootbox" %}</h2>
 						<picture>
 							<img src="{% static 'img/ice_chest.png' %}" alt="ice_chest">
 						</picture>
