--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -7117,8 +7117,8 @@ p.overview__love-stat-timer {
 	color: var(--c10two);
 }
 
-.login__pcRights {
-	display: none;
+ .login__pcRights {
+	margin-top: 15rem;
 }
 
 .login__rights a,
