--- a/player/templates/player/index.html
+++ b/player/templates/player/index.html
@@ -302,7 +302,7 @@
 
         <span class="login__pcRights">{% trans 'Продолжая использование сайта, вы принимаете условия' context "index" %} <br> <a
             href="##">{% trans 'Пользовательского соглашения' context "index" %}</a>
-          <br> <a href="/personal_data">{% trans 'и порядка обработки персональных данных' context "index" %}</a>
+          <br> <a href="/privacy">{% trans 'и Политики конфиденциальности' context "index" %}</a>
         </span>
       </div>
 
