--- a/player/templates/player/privacy.html
+++ b/player/templates/player/privacy.html
@@ -10,7 +10,7 @@
         <h1 align="center">{% trans 'Политика конфиденциальности' context "privacy" %}</h1>
         <div flex style="margin-top: 50px">
 
-            <p>{% trans 'Я, передавая уникальные идентификаторы социальных сетей, а также имя, фамилию и псевдонимы в них, далее именуемый(ая) "Субъект персональных данных", даю свое согласие на обработку своих персональных данных Администрацией Wild Politics, физическим лицом Горшенин А.И., далее именуемым "Администрация", в соответствии с законодательством Российской Федерации (далее - "Законодательство").' context "privacy" %}</p>
+            <p>{% trans 'Я, передавая уникальные идентификаторы социальных сетей, а также имя, фамилию и псевдонимы в них, далее именуемый(ая) "Субъект персональных данных", даю свое согласие на обработку своих персональных данных Администрацией Wild Politics, физическим лицом Горшенин Андрей Игоревич, далее именуемым "Администрация", в соответствии с законодательством Российской Федерации (далее - "Законодательство").' context "privacy" %}</p>
 
             <h3 align="center">{% trans 'Цель обработки персональных данных:' context "privacy" %}</h3>
             <ul>
