фикс удаления данных

--- a/player/templates/player/data_deleting.html
+++ b/player/templates/player/data_deleting.html
@@ -7,7 +7,7 @@
 <body>
     <h1 align="center">{% trans 'Инструкция по удалению персональных данных' context "data_deleting" %}</h1>
     <div flex style="margin-top: 50px">
-{% trans 'Для полного удаления ваших персональных данных, вам необходимо составить обращение в свободной форме, и отправить его по адресу электронной почты' context "data_deleting" %} <a href="mailto:wildpolitics@yandex.com">wildpolitics@yandex.com</a>.
+{% trans 'Для полного удаления ваших персональных данных, используемых в приложении и на сайте Wild Politics (далее-Проект), вам необходимо составить обращение в свободной форме, и отправить его по адресу электронной почты Разработчика (Горшенин Андрей Игоревич)' context "data_deleting" %} <a href="mailto:wildpolitics@yandex.com">wildpolitics@yandex.com</a>.
 <br>
 <br>
 {% trans 'В обращении требуется указать полное игровое имя вашего персонажа в Проекте, а также его уникальный ID (доступен в профиле персонажа).' context "data_deleting" %}
